Lik editorconfig fp-uttak + sonarfix